--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "contracts:coverage": "cd hardhat && npx hardhat --tsconfig ./tsconfig.hardhat.json coverage",
     "watch-contract": "cd hardhat && nodehelpers/watch.js",
     "watch-tinker": "cd hardhat && nodehelpers/tinker-watch.js",
-    "wire": "cd hardhat && npx hardhat --tsconfig ./tsconfig.hardhat.json run .helpers/wire.ts",
+    "wire": "cd hardhat && npx hardhat --tsconfig ./tsconfig.hardhat.json run ./helpers/wire.ts",
     "tinker": "cd hardhat && npx hardhat --tsconfig ./tsconfig.hardhat.json run ./scripts/tinker.ts",
     "task": "cd hardhat && npx hardhat --tsconfig ./tsconfig.hardhat.json",
     "publish:subgraph": "cd hardhat && npx hardhat --tsconfig ./tsconfig.hardhat.json run ./scripts/publish.ts",
