--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
   },
   "private": true,
   "dependencies": {
+    "@aave/core-v3": "^1.16.2",
     "@angular/animations": "~13.3.0",
-    "@angular/common": "~13.3.0",
     "@angular/cdk": "^13.3.4",
+    "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
@@ -43,6 +44,7 @@
     "@apollo/client": "^3.5.10",
     "@download/blockies": "^1.0.3",
     "@ngrx/store": "^13.0.2",
+    "@openzeppelin/contracts-upgradeable": "^4.7.3",
     "@superfluid-finance/sdk-core": "^0.3.2",
     "apollo-angular": "^3.0.0",
     "assert": "^2.0.0",
@@ -51,12 +53,12 @@
     "graphql": "^16.3.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
-    "rxjs": "~7.5.0",
-    "stream-browserify": "^3.0.0",
     "primeflex": "^3.1.0",
     "primeicons": "5.0.0",
     "primeng": "^13.3.3",
     "prismjs": "1.9.0",
+    "rxjs": "~7.5.0",
+    "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "tslib": "^2.3.0",
     "util": "^0.12.4",
@@ -66,35 +68,27 @@
     "@angular-devkit/build-angular": "~13.3.3",
     "@angular/cli": "~13.3.3",
     "@angular/compiler-cli": "~13.3.0",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2",
+    "@graphprotocol/graph-cli": "^0.22.1",
+    "@graphprotocol/graph-ts": "^0.22.1",
     "@nomiclabs/hardhat-ethers": "2.0.2",
     "@nomiclabs/hardhat-etherscan": "2.1.8",
     "@nomiclabs/hardhat-waffle": "2.0.0",
+    "@openzeppelin/contracts": "^4.5.0",
     "@typechain/ethers-v5": "8.0.5",
     "@typechain/hardhat": "3.0.0",
-    "typechain": "6.0.5",
-    "hardhat": "^2.8.0",
-    "hardhat-contract-sizer": "2.1.1",
-    "hardhat-gas-reporter": "1.0.6",
-    "hardhat-log-remover": "2.0.2",
-    "hardhat-spdx-license-identifier": "2.0.3",
-    "@types/fs-extra": "^9.0.13",
     "@types/chai": "^4.2.21",
+    "@types/fs-extra": "^9.0.13",
+    "@types/jasmine": "~3.10.0",
+    "@types/js-yaml": "^4.0.5",
     "@types/mocha": "^9.0.0",
+    "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
+    "@superfluid-finance/ethereum-contracts": "^1.1.1",
+    "bip39": "^3.0.4",
     "chai": "^4.2.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.29.0",
-    "fs-extra": "^10.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
@@ -103,19 +97,28 @@
     "eslint-plugin-promise": "^5.1.0",
     "ethereum-waffle": "^3.0.0",
     "ethereumjs-util": "^7.1.4",
-    "@openzeppelin/contracts": "^4.5.0",
+    "ethereumjs-wallet": "^1.0.2",
+    "fs-extra": "^10.0.0",
+    "hardhat": "^2.8.0",
+    "hardhat-contract-sizer": "2.1.1",
+    "hardhat-gas-reporter": "1.0.6",
+    "hardhat-log-remover": "2.0.2",
+    "hardhat-spdx-license-identifier": "2.0.3",
+    "jasmine-core": "~4.0.0",
+    "js-yaml": "^4.1.0",
+    "karma": "~6.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.1.0",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "mustache": "^3.1.0",
+    "node-watch": "^0.7.2",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "solhint": "^3.3.6",
     "solidity-coverage": "^0.7.16",
-    "node-watch": "^0.7.2",
     "ts-node": "^10.1.0",
-    "bip39": "^3.0.4",
-    "ethereumjs-wallet": "^1.0.2",
-    "mustache": "^3.1.0",
-    "@graphprotocol/graph-cli": "^0.22.1",
-    "@graphprotocol/graph-ts": "^0.22.1",
-    "js-yaml": "^4.1.0",
-    "@types/js-yaml": "^4.0.5"
+    "typechain": "6.0.5",
+    "typescript": "~4.6.2"
   }
 }
