--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "deploy-graph": "cd add-ons/subgraph && graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ GITHUB_USERNAME/your-contract",
     "run-graph-node": "cd add-ons/graph-node && docker-compose up",
     "remove-graph-node": "cd add-ons/graph-node && docker-compose down",
-    "clean-graph-node": "rm -rf add-ons/graph-node/data/",
-    "create-graph-local": "cd add-ons/subgraph && graph create --node http://localhost:8020/ angular-web3/gravatar",
-    "remove-graph-local": "cd add-ons/subgraph && graph remove --node http://localhost:8020/ angular-web3/gravatar",
-    "deploy-graph-local": "cd add-ons/subgraph && graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 angular-web3/gravatar"
+    "clean-graph-node": "rimraf add-ons/graph-node/data/",
+    "create-graph-local": "cd add-ons/subgraph && graph create --node http://localhost:8020/ donoso-eth/floowdy",
+    "remove-graph-local": "cd add-ons/subgraph && graph remove --node http://localhost:8020/ donoso-eth/floowdy",
+    "deploy-graph-local": "cd add-ons/subgraph && graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 donoso-eth/floowdy"
   },
   "private": true,
   "dependencies": {
