--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "wire": "cd hardhat && npx hardhat --tsconfig ./tsconfig.hardhat.json run ./helpers/wire.ts",
     "tinker": "cd hardhat && npx hardhat --tsconfig ./tsconfig.hardhat.json run ./scripts/tinker.ts",
     "task": "cd hardhat && npx hardhat --tsconfig ./tsconfig.hardhat.json",
-    "publish:subgraph": "cd hardhat && npx hardhat --tsconfig ./tsconfig.hardhat.json run ./scripts/publish.ts",
     "codegen": "cd add-ons/subgraph && graph codegen",
     "build-graph": "cd add-ons/subgraph && graph build",
-    "deploy-graph": "cd add-ons/subgraph && graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ GITHUB_USERNAME/your-contract",
+    "deploy-graph": "cd add-ons/subgraph && graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ donoso-eth/floowdy",
     "run-graph-node": "cd add-ons/graph-node && docker-compose up",
     "remove-graph-node": "cd add-ons/graph-node && docker-compose down",
     "clean-graph-node": "rimraf add-ons/graph-node/data/",
