--- a/hardhat/networks.config.json
+++ b/hardhat/networks.config.json
@@ -5,17 +5,19 @@
         "superToken":"0xbCE2198f789f3AC1Af76D3835BEe8A61830aAd34",
         "token":"0xA2025B15a1757311bfD68cb14eaeFCc237AF5b43",
         "aavePool":"0x368EedF3f56ad10b9bC57eed4Dac65B26Bb667f6",
-        "aToken":"0x1Ee669290939f8a8864497Af3BC83728715265FF"
+        "aToken":"0x1Ee669290939f8a8864497Af3BC83728715265FF",
+        "aStableDebtToken":"0xF04958AeA8b7F24Db19772f84d7c2aC801D9Cf8b"
 
     },
 
     "mumbai":{
         "ops":"0xB3f5503f93d5Ef84b06993a1975B9D21B962892F",
         "host":"0xEB796bdb90fFA0f28255275e16936D25d3418603",
-        "superToken":"",
-        "token":"",
-        "aavePool":"",
-        "aToken":""
+        "superToken":"0xedda0316ab5D48150eeD0914C4b6032E9D9c357C",
+        "token":"0x9aa7fEc87CA69695Dd1f879567CcF49F3ba417E2",
+        "aavePool":"0x6C9fB0D5bD9429eb9Cd96B85B81d872281771E6B",
+        "aToken":"0xCdc2854e97798AfDC74BC420BD5060e022D14607",
+        "aStableDebtToken":"0x01dBEdcb2437c79341cfeC4Cae765C53BE0E6EF7"
 
     }
 }
