--- a/hardhat/networks.config.json
+++ b/hardhat/networks.config.json
@@ -6,8 +6,9 @@
         "token":"0xA2025B15a1757311bfD68cb14eaeFCc237AF5b43",
         "aavePool":"0x368EedF3f56ad10b9bC57eed4Dac65B26Bb667f6",
         "aToken":"0x1Ee669290939f8a8864497Af3BC83728715265FF",
-        "aStableDebtToken":"0xF04958AeA8b7F24Db19772f84d7c2aC801D9Cf8b"
-
+        "aStableDebtToken":"0xF04958AeA8b7F24Db19772f84d7c2aC801D9Cf8b",
+        "epnsComm":"0xb3971BCef2D791bc4027BbfedFb47319A4AAaaAa",
+        "epnsChanel":"0xBd1D48c63C82F86c71cBBe25Ea84a8C31B003eCb"
     },
 
     "mumbai":{
@@ -17,7 +18,8 @@
         "token":"0x9aa7fEc87CA69695Dd1f879567CcF49F3ba417E2",
         "aavePool":"0x6C9fB0D5bD9429eb9Cd96B85B81d872281771E6B",
         "aToken":"0xCdc2854e97798AfDC74BC420BD5060e022D14607",
-        "aStableDebtToken":"0x01dBEdcb2437c79341cfeC4Cae765C53BE0E6EF7"
-
+        "aStableDebtToken":"0x01dBEdcb2437c79341cfeC4Cae765C53BE0E6EF7",
+        "epnsComm":"0xb3971BCef2D791bc4027BbfedFb47319A4AAaaAa",
+        "epnsChanel":"0xBd1D48c63C82F86c71cBBe25Ea84a8C31B003eCb"
     }
 }
