--- a/hardhat/networks.config.json
+++ b/hardhat/networks.config.json
@@ -3,6 +3,7 @@
         "ops":"0xc1C6805B857Bef1f412519C4A842522431aFed39",
         "host":"0x22ff293e14F1EC3A09B137e9e06084AFd63adDF9",
         "superToken":"0xbCE2198f789f3AC1Af76D3835BEe8A61830aAd34",
+        "sfResolver":"0x3710AB3fDE2B61736B8BB0CE845D6c61F667a78E",
         "token":"0xA2025B15a1757311bfD68cb14eaeFCc237AF5b43",
         "aavePool":"0x368EedF3f56ad10b9bC57eed4Dac65B26Bb667f6",
         "aToken":"0x1Ee669290939f8a8864497Af3BC83728715265FF",
@@ -15,6 +16,7 @@
         "ops":"0xB3f5503f93d5Ef84b06993a1975B9D21B962892F",
         "host":"0xEB796bdb90fFA0f28255275e16936D25d3418603",
         "superToken":"0xedda0316ab5D48150eeD0914C4b6032E9D9c357C",
+        "sfResolver":"0x8C54C83FbDe3C59e59dd6E324531FB93d4F504d3",
         "token":"0x9aa7fEc87CA69695Dd1f879567CcF49F3ba417E2",
         "aavePool":"0x6C9fB0D5bD9429eb9Cd96B85B81d872281771E6B",
         "aToken":"0xCdc2854e97798AfDC74BC420BD5060e022D14607",
