--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,11 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/prismjs/prism.js",
+              "node_modules/prismjs/components/prism-typescript.js"
+          ],
+          "allowedCommonJsDependencies": ["chart.js"]
           },
           "configurations": {
             "production": {
