--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "primeicons": "5.0.0",
     "primeng": "^13.3.3",
     "prismjs": "1.9.0",
+    "chart.js": "^3.3.2",
     "rxjs": "~7.5.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
