--- a/add-ons/graph-node/docker-compose.yml
+++ b/add-ons/graph-node/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       ipfs: "ipfs:5001"
       ethereum: "localhost:http://host.docker.internal:8545"
       GRAPH_LOG: info
+      GRAPH_ALLOW_NON_DETERMINISTIC_FULLTEXT_SEARCH: "true"
       ETHEREUM_REORG_THRESHOLD: 1
       ETHEREUM_ANCESTOR_COUNT: 1
   ipfs:
