--- a/add-ons/subgraph/subgraph.yaml
+++ b/add-ons/subgraph/subgraph.yaml
@@ -8,7 +8,7 @@ dataSources:
     name: Floowdy
     network: localhost
     source:
-      address: '0x98F45b84B4824d7A96e7672A154bA8DC3988A20b'
+      address: '0xa7E99C1df635d13d61F7c81eCe571cc952E64526'
       abi: Floowdy
       startBlock: 7588383
     mapping:
@@ -39,7 +39,7 @@ dataSources:
             CreditRejected((uint256,address,uint256,uint256,uint8,bytes32,(uint256,uint256,address[],uint256,uint256),(uint256,uint256,uint256,uint256,uint256,uint256,uint256,bytes32)))
           handler: handleCreditRejected
         - event: >-
-            CreditRequested((uint256,address,uint256,uint256,uint8,bytes32,(uint256,uint256,address[],uint256,uint256),(uint256,uint256,uint256,uint256,uint256,uint256,uint256,bytes32)),string)
+            CreditRequested((uint256,address,uint256,uint256,uint8,bytes32,(uint256,uint256,address[],uint256,uint256),(uint256,uint256,uint256,uint256,uint256,uint256,uint256,bytes32)))
           handler: handleCreditRequested
         - event: MemberDelegateCredit(uint256,address,uint256)
           handler: handleMemberDelegateCredit
