--- a/hardhat/networks.config.json
+++ b/hardhat/networks.config.json
@@ -8,7 +8,8 @@
         "token":"0xA2025B15a1757311bfD68cb14eaeFCc237AF5b43",
         "aavePool":"0x368EedF3f56ad10b9bC57eed4Dac65B26Bb667f6",
         "aToken":"0x1Ee669290939f8a8864497Af3BC83728715265FF",
-        "aStableDebtToken":"0xF04958AeA8b7F24Db19772f84d7c2aC801D9Cf8b",
+        "aStableDebtToken":"0xbaBd1C3912713d598CA2E6DE3303fC59b19d0B0F",
+        "debtToken":"0xDF1742fE5b0bFc12331D8EAec6b478DfDbD31464",
         "epnsComm":"0xb3971BCef2D791bc4027BbfedFb47319A4AAaaAa",
         "epnsChanel":"0xBd1D48c63C82F86c71cBBe25Ea84a8C31B003eCb"
     },
@@ -22,7 +23,8 @@
         "token":"0x9aa7fEc87CA69695Dd1f879567CcF49F3ba417E2",
         "aavePool":"0x6C9fB0D5bD9429eb9Cd96B85B81d872281771E6B",
         "aToken":"0xCdc2854e97798AfDC74BC420BD5060e022D14607",
-        "aStableDebtToken":"0x01dBEdcb2437c79341cfeC4Cae765C53BE0E6EF7",
+        "aStableDebtToken":"0xbaBd1C3912713d598CA2E6DE3303fC59b19d0B0F",
+        "debtToken":"0x310839bE20Fc6a8A89f33A59C7D5fC651365068f",
         "epnsComm":"0xb3971BCef2D791bc4027BbfedFb47319A4AAaaAa",
         "epnsChanel":"0x464B916c32e9aB72CFA5E94a4aB768797b46A1dD"
     }
