--- a/add-ons/subgraph/subgraph.yaml
+++ b/add-ons/subgraph/subgraph.yaml
@@ -8,7 +8,7 @@ dataSources:
     name: Floowdy
     network: localhost
     source:
-      address: '0x115686C5B6256B7b8Aa426d75fC4DEa6354A59De'
+      address: '0x0373771b0a8A53dEA04b8A7F33763fc73663440A'
       abi: Floowdy
       startBlock: 7588383
     mapping:
@@ -49,7 +49,7 @@ dataSources:
         - event: >-
             CreditRequested((uint256,address,uint256,uint256,uint8,bytes32,(uint256,uint256,address[],uint256,uint256),(uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256,bytes32)))
           handler: handleCreditRequested
-        - event: MemberDelegateCredit(uint256,address,uint256)
+        - event: MemberDelegateCredit(address,uint256)
           handler: handleMemberDelegateCredit
         - event: >-
             MemberDeposit((uint256,address,int96,bytes32,uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256))
@@ -57,6 +57,8 @@ dataSources:
         - event: >-
             MemberStream((uint256,address,int96,bytes32,uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256))
           handler: handleMemberStream
+        - event: MemberWithdraw(address,uint256)
+          handler: handleMemberWithdraw
         - event: >-
             PoolUpdated((uint256,uint64,int96,uint256,uint256,uint256,uint256,uint256,uint256,(uint256,uint256,uint256,uint256,uint256),uint256,uint256,uint256))
           handler: handlePoolUpdated
