--- a/add-ons/subgraph/subgraph.yaml
+++ b/add-ons/subgraph/subgraph.yaml
@@ -8,7 +8,7 @@ dataSources:
     name: Floowdy
     network: localhost
     source:
-      address: '0x0373771b0a8A53dEA04b8A7F33763fc73663440A'
+      address: '0x072A13215d3F56e195B1E7803445C51ae8392407'
       abi: Floowdy
       startBlock: 7588383
     mapping:
@@ -46,6 +46,8 @@ dataSources:
         - event: >-
             CreditRejected((uint256,address,uint256,uint256,uint8,bytes32,(uint256,uint256,address[],uint256,uint256),(uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256,bytes32)))
           handler: handleCreditRejected
+        - event: CreditRepayed(uint256)
+          handler: handleCreditRepayed
         - event: >-
             CreditRequested((uint256,address,uint256,uint256,uint8,bytes32,(uint256,uint256,address[],uint256,uint256),(uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256,bytes32)))
           handler: handleCreditRequested
